--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul id="catList"></ul>
 
     <div id="catDetails">
-        <div id="catPicture"></div>
+        <img id="catPicture"></img>
         <p id="catCount"></p>
     </div>
 </body>
